# cotaciones

./: .env.production  .gitignore  Dockerfile  package-lock.json  package.json  package.json.new  pyproject.toml  settings_backup.tsx  test_ml_model.sh  theme.json
.idx/: dev.nix
client/: index.html
client/src/: App.tsx  index.css  main.tsx
ml_service/: analyze_data.py  data_processor.py  enrich_data.sh  enriched_data.csv  improved_prediction.py  predict.py  test_csv.py  test_existing_routes.py  test_improved_prediction.py  test_prediction.py  test_seasonal_factors.py  test_similar_routes.py  test_single_route.py  test_unknown_coordinates.py  train.py
ml_service/models/: enhanced_gb_model.pkl  enhanced_gb_model_metadata.json  enhanced_gb_scaler.pkl  gb_model.pkl  gb_model_20250410_201508.pkl  gb_model_20250410_201508_metadata.json  gb_model_20250410_201926_metadata.json  gb_model_20250410_205025_metadata.json  gb_model_20250410_205112_metadata.json  gb_model_metadata.json  gb_scaler.pkl  gb_scaler_20250410_205112.pkl
public/: app-ready.txt
server/: db.ts  firebase.ts  index.ts  routes.ts  storage.ts
server/firebase/: initialLoad.ts  placeCache.ts  realtimeSync.ts  syncManager.ts
server/handlers/: aduanaRecommendationHandler.ts  appSettingsHandler.ts  distanceHandler.ts  exchangeRatesHandler.ts  freightCalculationHandler.ts  mlHandler.ts  mlHandler.ts.bak  mlSimulationHandler.ts  mlTestHandler.ts  mockDistanceHandler.ts  mockPlacesHandler.ts  placesHandler.ts
server/routes/: crossingPoints.ts  index.ts
server/scripts/: runMigration.ts  (+1 more)
shared/: schema.ts
(+70 files in other folders)
