[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.1",          # Added FastAPI
    "uvicorn[standard]>=0.30.3", # Added Uvicorn with standard extras
    "firebase-admin>=6.7.0",
    "geopy>=2.4.1",
    "google-cloud-firestore>=2.20.1",
    "joblib>=1.4.2",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "tabulate>=0.9.0",
]
